@@ -797,8 +797,7 @@ $pgv_lang["move_standard"]			= "Move to standard";
 $pgv_lang["move_protected"]			= "Move to protected";
 $pgv_lang["move_mediadirs"]			= "Move Media directories";
 $pgv_lang["setperms"]				= "Set Media Permissions";
-$pgv_lang["setperms_writable"]		= "Make World-Writable";
-$pgv_lang["setperms_readonly"]		= "Make World-Read Only";
+$pgv_lang["setperms_fix"]			= "Fix Permissions";
 $pgv_lang["setperms_success"]		= "Permissions Set";
 $pgv_lang["setperms_failure"]		= "Permissions Not Set";
 $pgv_lang["setperms_time_exceeded"]	= "The execution time limit was reached.  Try the command again on a smaller directory.";
